__main__.py into utils.
Added AutoSuggestCompleter() class into utils to handle the
suggestions.
Added mock_prompt_session() fixture into conftests.py to monkeypatch
a PromptSession object.
Updated tests accordingly.

*****

Added history to cli_search() and cli_ads_search() prompts.
Added path to history files in utils.

*****

Update docs.
Minor tweaks here and there.

*****

Bumped bibmanager version to 1.1.0.
Next merge resolves #32
Although this does not resolve the original idea of enabling
autocomplete for the main bibm command-line calls, it adds very
convenient auto-complete help in searches. So I will close #28

*****

Updated Zenodo links.

*****

Bumped bibmanager version to 1.1.1.


*****  Sat May 25 21:43:36 CEST 2019  *****

Refactored bm.merge() to accept base argument.  When provided
merge new entries into base, rather than into the BM database.
Also, bm.merge() now returns the merged list of entries.
Tested.


*****  Mo 27. Mai 09:06:02 CEST 2019  *****

Modified Bib.eprint to keep only the ID (remove 'arxiv' and
'astro-ph' preamble) to prevent duplicate non-detections.

*****

Implemented Bib.update_key() method to updated the key and content
of a Bib instance.
Tested.

*****

Fixed bug in setup.py (changed tests_requires to tests_require).

*****

Refactored am.add_bibtex(), adding base argument which merges
new/updated entries into base (if not None).
Also, am.add_bibtex() now returns the the updated list of entries.
API was completely refactored to catch matching DOIs and eprint IDs.

*****

Tweaked am.add_bibtex() to accept eprints and dois lists.
If provided, the code will attempt to match ADS results against
the provided fields.
Some other minor tweaks in the screen output.
Updated tests.

*****

Refactored am.update() to accept base argument. When provided,
ads-update entries in base rather than the BM database entries.
Added passing DOI and eprint lists into am.add_bibtex().
Also, am.update() now returns the updated list of entries.
